--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -1,29 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>My Team</title>
-</head>
 
 <div class="col-md-4">
     <div class="card bg-primary border-light shadow mb-3" style="max-width: 18rem; height: 22rem;">
         <div class="card-header text-white">
-            <h2 id="name">nameHere</h2>
+            <h2 id="name">{{ name }}</h2>
             <h3><span class="fas fa-glasses"></span> Engineer</h3>
         </div>
         <div class="card-body bg-light align-content-center flex-wrap">
-            <div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item" id="id">idHere </li>
-                    <li class="list-group-item" id="email">emailHere </li>
-                    <li class="list-group-item" id="info">infoHere </li>
+            <div class="p-3 bg-light list-group-flush">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        ID : {{ id }}
+                    </li>
+                    <li class="list-group-item">
+                        Email : <a href="{{ email }}">{{ email }}</a>
+                    </li>
+                    <li class="list-group-item">
+                        Github : <a href="{{ github }}">{{ github }}</a>
+                    </li>
                 </ul>
             </div>
         </div>
