--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,12 @@
             </h1>
         </div>
     </header>
-
-    <main class="container">
-        <div class="row d-flex justify-content-center" id="teamContainer">
+    <div class="container">
+        <div class="row">
+          <div class="team-area row col-12 d-flex justify-content-center">
+            {{ body }}
+          </div>
+        </div>
+      </div>
+    </body>
+  </html>
